added slack and wiki links

--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -23,6 +23,9 @@
                         <li class="jp nav-link"><%=link_to 'ビデオ', '#videos' %></li>
                         <li class="en nav-link"><%=link_to 'Contact', 'mailto:hello@hnkansai.org' %></li>
                         <li class="jp nav-link"><%=link_to '連絡', 'mailto:hello@hnkansai.org' %></li>
+
+                        <li class="nav-link"><a href="http://slack.hnkansai.org">Slack</a></li>
+                        <li class="nav-link"><a href="https://scrapbox.io/HNKansai/">Wiki</a></li>
                     </ul>
                 <div class="social pull-right">
                   <li class='social-icon'><%= link_to image_tag('facebook.png'), 'https://www.facebook.com/groups/hnkansai' %></li>
