--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,6 +3,7 @@ title: Hacker News Kansai
 ---
   <%= partial 'partials/header' %>
 
+  <!--
   <section id="welcome">
     <div class="container">
         <span id="about" class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
@@ -14,22 +15,57 @@ title: Hacker News Kansai
               HNKansaiとは <%=link_to 'ハッカーニュース', 'https://news.ycombinator.com' %> 関西読者のオフ会です。 毎月関西周辺で、技術、デザイン、ゲームやスタートアップなどの話をするためのミーティング・交流会を行います。HN関西に是非ご参加ください！
             </p>
         </span>
-          <span id="newsletter" class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-              <p class="en"> Sign up to be notified about upcoming events and other news.</p>
-              <p class="jp"> ニュースレター</p>
-              <!-- Begin MailChimp Signup Form -->
-              <div id="mc_embed_signup">
-                <form action="https://hnkansai.us7.list-manage.com/subscribe/post?u=491fac1e90fe1caaf30a86e62&amp;id=6221c3d7b1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" autocomplete="email" placeholder="Email Address" required>
-                  <div class="clear"><input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                </form>
-              </div>
-              <!--End mc_embed_signup-->
-          </span>
       </div>
   </section>
+  -->
+  
+  <section id="join">
+    <div class="container">
+      <h2 class="en">Join Us!</h2>
+      <h3 class='en'>
+        Every month, we get together in Kyoto, Osaka, or Kobe to talk about technology, design, games, and startups. Come join us!
+      </h3>
+      <h3 class='jp'>
+        毎月関西周辺で、技術、デザイン、ゲームやスタートアップなどの話をするためのミーティング・交流会を行います。HN関西に是非ご参加ください！
+      </h3>
+      <div class="flex-container">
+        <div class="block">
+          <h4>Meet People</h4>
+          <p>Meet local developers, designers, and other tech-curious members.</p>
+        </div>
+        <div class="block">
+          <h4>Learn Stuff</h4>
+          <p>Learn about new technologies and fields you didn't even knew existed!</p>
+        </div>
+        <div class="block">
+          <h4>Present Your Work</h4>
+          <p>Share your work and gain valuable feedback and presenting experience.</p>
+        </div>
+        <div class="block">
+          <h4>Share Your Interests</h4>
+          <p>Give talks about your interests or hobbies, no matter how niche they may be!</p>
+        </div>
+      </div>
+      <div class="cta">
+        <a href="https://www.meetup.com/Hacker-News-Kansai">Join an Event</a>
+        <a href="http://slack.hnkansai.org/">Join our Slack</a>
+      </div>
+      <span id="newsletter" class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+          <p class="en"> Sign up to be notified about upcoming events and other news.</p>
+          <p class="jp"> ニュースレター</p>
+          <!-- Begin MailChimp Signup Form -->
+          <div id="mc_embed_signup">
+            <form action="https://hnkansai.us7.list-manage.com/subscribe/post?u=491fac1e90fe1caaf30a86e62&amp;id=6221c3d7b1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" autocomplete="email" placeholder="Email Address" required>
+              <div class="clear"><input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            </form>
+          </div>
+          <!--End mc_embed_signup-->
+      </span>
+    </div>
+  </section>
 
-    <section id="videos">
+  <section id="videos">
     <div class="container">
          <h2 class="en">Videos</h2>
          <h2 class="jp">ビデオ</h2>
@@ -54,7 +90,7 @@ title: Hacker News Kansai
       <div id="sacha" class="organizer col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2">
         <%= image_tag 'sacha.jpg', :class => 'profile-pic'  %>
         <div class="caption">
-          <h3>Sacha Greif </h3>
+          <h4>Sacha Greif </h4>
           <li><a href="https://twitter.com/SachaGreif">@SachaGreif</a></li>
           <li><a href="http://sachagreif.com">http://sachagreif.com</a></li>
         </div>
@@ -63,7 +99,7 @@ title: Hacker News Kansai
       <div id="raphael" class="organizer col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2">
         <%= image_tag 'raphael.jpg', :class => 'profile-pic'  %>
        <div class="caption">
-          <h3>Raphael Guyot </h3>
+          <h4>Raphael Guyot </h4>
           <li><a href="https://twitter.com/sanqualis">@sanqualis</a></li>
           <li><a href="http://sanqualis.com">http://sanqualis.com</a></li>
         </div>
@@ -72,7 +108,7 @@ title: Hacker News Kansai
       <div id ="paco" class="organizer col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2">
         <%= image_tag 'paco.jpg', :class => 'profile-pic'  %>
         <div class="caption">
-          <h3>Francisco 'Paco' Alcantara</h3>
+          <h4>Francisco 'Paco' Alcantara</h4>
           <li><a href="https://twitter.com/pacoalcantara">@PacoAlcantara</a></li>
           <li><a href="https://www.flickr.com/photos/fotopakismo/">Flickr</a></li>
         </div>
