--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -420,4 +420,43 @@ text-align:center
 /* Medium devices (desktops, 992px and up) */
 
 
-
+#join{
+  text-align: center;
+  h3{
+    margin: 0 auto;
+    margin-bottom: 30px;
+    max-width: 800px;
+    line-height: 1.5;
+  }
+  .flex-container{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    max-width: 800px;
+  }
+  .block{
+    width: 50%;
+    margin-bottom: 30px;
+    padding: 0 20px;
+    h4{
+      font-size: 24px;
+      font-weight: bold;
+    }
+    p{
+      font-size: 16px;
+    }
+  }
+  .cta{
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 30px;
+    margin-bottom: 20px;
+    a{
+      font-size: 18px;
+      display: inline-block;
+      margin: 0 20px;
+      border: 1px solid #337ab7;
+      border-radius: 3px;
+      padding: 10px 20px;
+    }
+  }
+}
