--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,7 +18,7 @@ title: Hacker News Kansai
       </div>
   </section>
   -->
-  
+
   <section id="join">
     <div class="container">
       <h2 class="en">Join Us!</h2>
@@ -35,15 +35,15 @@ title: Hacker News Kansai
         </div>
         <div class="block">
           <h4>Learn Stuff</h4>
-          <p>Learn about new technologies and fields you didn't even knew existed!</p>
+          <p>Learn about new technologies and fields you didn't even know existed!</p>
         </div>
         <div class="block">
           <h4>Present Your Work</h4>
-          <p>Share your work and gain valuable feedback and presenting experience.</p>
+          <p>Share your work, and gain valuable feedback and presenting experience.</p>
         </div>
         <div class="block">
           <h4>Share Your Interests</h4>
-          <p>Give talks about your interests or hobbies, no matter how niche they may be!</p>
+          <p>Give talks about your interests or hobbies, no matter how niche they may seem!</p>
         </div>
       </div>
       <div class="cta">
