Slack link doesn't work anymore.

--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -24,7 +24,7 @@
                         <li class="en nav-link"><%=link_to 'Contact', 'mailto:hello@hnkansai.org' %></li>
                         <li class="jp nav-link"><%=link_to '連絡', 'mailto:hello@hnkansai.org' %></li>
 
-                        <li class="nav-link"><a href="http://slack.hnkansai.org">Slack</a></li>
+                        <li class="nav-link"><a href="https://hnkansai-slack.now.sh/">Slack</a></li>
                         <li class="nav-link"><a href="https://scrapbox.io/HNKansai/">Wiki</a></li>
                     </ul>
                 <div class="social pull-right">
