--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -48,7 +48,7 @@ title: Hacker News Kansai
       </div>
       <div class="cta">
         <a href="https://www.meetup.com/Hacker-News-Kansai">Join an Event</a>
-        <a href="http://slack.hnkansai.org/">Join our Slack</a>
+        <a href="https://hnkansai-slack.now.sh/">Join our Slack</a>
       </div>
       <span id="newsletter" class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
           <p class="en"> Sign up to be notified about upcoming events and other news.</p>
