--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -26,6 +26,8 @@
 
                         <li class="nav-link"><a href="https://hnkansai-slack.now.sh/">Slack</a></li>
                         <li class="nav-link"><a href="https://scrapbox.io/HNKansai/">Wiki</a></li>
+                        <li class="nav-link"><a href="https://github.com/hnkansai/">GitHub</a></li>
+                        
                     </ul>
                 <div class="social pull-right">
                   <li class='social-icon'><%= link_to image_tag('facebook.png'), 'https://www.facebook.com/groups/hnkansai' %></li>
