Update broken link in footer.

--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -5,7 +5,7 @@
             Copyright &copy; <%= Time.now.year %> Hacker News Kansai
       </div>
       <div id="created">
-            Created by <%= link_to 'FajitaNachos', 'http://fajitanachos.com' %>
+            Created by <%= link_to 'FajitaNachos', 'https://github.com/andrewholsted' %>
       </div>
     </div>
   </section>
